--- a/architecture.html
+++ b/architecture.html
@@ -158,10 +158,10 @@
             <!-- Smart Grid Homes -->
             <div class="col">
                 <div class="card h-100 shadow-lg border-0 rounded-4 text-center">
-                    <div class="card-body p-4">
-                    <h4 class="mb-3" style="color: #228B22;">Smart Grid Homes</h4>
-                    <p>Zero-emission residences powered by solar arrays and battery walls. Integrated AI regulates power and climate for max efficiency.</p>
-                    <button type="button" class="btn btn-outline-forest mt-3" data-bs-toggle="modal" data-bs-target="#modalSmartGrid">Browse Images</button>
+                    <div class="feature-box card-body p-4">
+                        <h4 class="mb-3" style="color: #228B22;">Smart Grid Homes</h4>
+                        <p>Zero-emission residences powered by solar arrays and battery walls. Integrated AI regulates power and climate for max efficiency.</p>
+                        <button type="button" class="btn btn-outline-forest mt-3" data-bs-toggle="modal" data-bs-target="#modalSmartGrid">Browse Images</button>
                     </div>
                 </div>
             </div>
@@ -190,10 +190,10 @@
             <!-- Vertical Eco Towers -->
             <div class="col">
                 <div class="card h-100 shadow-lg border-0 rounded-4 text-center">
-                    <div class="card-body p-4">
-                    <h4 class="mb-3" style="color: #228B22;">Vertical Eco Towers</h4>
-                    <p>Skyscrapers with living walls, rain capture systems, and adaptive solar glazing—built for dense, green urbanism.</p>
-                    <button type="button" class="btn btn-outline-forest mt-3" data-bs-toggle="modal" data-bs-target="#modalEcoTowers">Browse Images</button>
+                    <div class="feature-box card-body p-4">
+                        <h4 class="mb-3" style="color: #228B22;">Vertical Eco Towers</h4>
+                        <p>Skyscrapers with living walls, rain capture systems, and adaptive solar glazing—built for dense, green urbanism.</p>
+                        <button type="button" class="btn btn-outline-forest mt-3" data-bs-toggle="modal" data-bs-target="#modalEcoTowers">Browse Images</button>
                     </div>
                 </div>
             </div>
@@ -222,10 +222,10 @@
             <!-- Modular Habitat Nodes -->
             <div class="col">
                 <div class="card h-100 shadow-lg border-0 rounded-4 text-center">
-                    <div class="card-body p-4">
-                    <h4 class="mb-3" style="color: #228B22;">Modular Habitat Nodes</h4>
-                    <p>Quick-deploy shelters for off-grid living, disaster response, or space base prototypes. Lightweight, resilient, and stackable.</p>
-                    <button type="button" class="btn btn-outline-forest mt-3" data-bs-toggle="modal" data-bs-target="#modalHabitat">Browse Images</button>
+                    <div class="feature-box card-body p-4">
+                        <h4 class="mb-3" style="color: #228B22;">Modular Habitat Nodes</h4>
+                        <p>Quick-deploy shelters for off-grid living, disaster response, or space base prototypes. Lightweight, resilient, and stackable.</p>
+                        <button type="button" class="btn btn-outline-forest mt-3" data-bs-toggle="modal" data-bs-target="#modalHabitat">Browse Images</button>
                     </div>
                 </div>
             </div>
