--- a/armor.html
+++ b/armor.html
@@ -161,7 +161,7 @@
             <!-- VX-Tac Vest MkII -->
             <div class="col">
                 <div class="card h-100 shadow-lg border-0 rounded-4 text-center">
-                    <div class="card-body p-4">
+                    <div class="feature-box card-body p-4">
                         <h4 class="mb-3" style="color: #b30000;">VX-Tac Vest MkII</h4>
                         <p>High-density Kevlar weave, modular pouch system, and reinforced ceramic trauma plates.</p>
                         <button type="button" class="btn btn-outline-deepred mt-3" data-bs-toggle="modal" data-bs-target="#modalVest">Browse Images</button>
@@ -193,7 +193,7 @@
             <!-- RD-09 Riot Frame -->
             <div class="col">
                 <div class="card h-100 shadow-lg border-0 rounded-4 text-center">
-                    <div class="card-body p-4">
+                    <div class="feature-box card-body p-4">
                         <h4 class="mb-3" style="color: #b30000;">RD-09 Riot Frame</h4>
                         <p>Full-body impact armor with kinetic dampeners, visor HUD, and reinforced forearm guards.</p>
                         <button type="button" class="btn btn-outline-deepred mt-3" data-bs-toggle="modal" data-bs-target="#modalRiot">Browse Images</button>
@@ -225,7 +225,7 @@
             <!-- RLS-3 Ghost Skin -->
             <div class="col">
                 <div class="card h-100 shadow-lg border-0 rounded-4 text-center">
-                    <div class="card-body p-4">
+                    <div class="feature-box card-body p-4">
                         <h4 class="mb-3" style="color: #b30000;">RLS-3 Ghost Skin</h4>
                         <p>Ultra-light stealth armor with reactive camo coating, sensor jammers, and thermal damping.</p>
                         <button type="button" class="btn btn-outline-deepred mt-3" data-bs-toggle="modal" data-bs-target="#modalRecon">Browse Images</button>
