--- a/drones.html
+++ b/drones.html
@@ -158,7 +158,7 @@
             <!-- SL-01 Falcon -->
             <div class="col">
                 <div class="card h-100 shadow-lg border-0 rounded-4 text-center">
-                    <div class="card-body p-4">
+                    <div class="feature-box card-body p-4">
                         <h4 class="mb-3" style="color: #8e44ad;">SL-01 “Falcon”</h4>
                         <p>Autonomous Aerial Surveillance Unit designed for area sweeps, anomaly detection, and live-stream feeds. RTB & self-charging enabled.</p>
                         <button type="button" class="btn btn-outline-violet mt-3" data-bs-toggle="modal" data-bs-target="#modalFalcon">Browse Images</button>
@@ -189,7 +189,7 @@
             <!-- SL-02 Hunter -->
             <div class="col">
                 <div class="card h-100 shadow-lg border-0 rounded-4 text-center">
-                    <div class="card-body p-4">
+                    <div class="feature-box card-body p-4">
                         <h4 class="mb-3" style="color: #8e44ad;">SL-02 “Hunter”</h4>
                         <p>High-speed pursuit UAV using vision + GPS locking. Features pack-hunting AI and full autonomy with manual override support.</p>
                         <button type="button" class="btn btn-outline-violet mt-3" data-bs-toggle="modal" data-bs-target="#modalHunter">Browse Images</button>
@@ -220,7 +220,7 @@
             <!-- SL-03 Vulture -->
             <div class="col">
                 <div class="card h-100 shadow-lg border-0 rounded-4 text-center">
-                    <div class="card-body p-4">
+                    <div class="feature-box card-body p-4">
                         <h4 class="mb-3" style="color: #8e44ad;">SL-03 “Vulture”</h4>
                         <p>Heavy-duty UAV built for payload delivery and equipment deployment in hard-to-reach locations. Magnetic clamps & dual rotors included.</p>
                         <button type="button" class="btn btn-outline-violet mt-3" data-bs-toggle="modal" data-bs-target="#modalVulture">Browse Images</button>
@@ -251,7 +251,7 @@
             <!-- SL-04 Viper -->
             <div class="col">
                 <div class="card h-100 shadow-lg border-0 rounded-4 text-center">
-                    <div class="card-body p-4">
+                    <div class="feature-box card-body p-4">
                         <h4 class="mb-3" style="color: #8e44ad;">SL-04 “Viper”</h4>
                         <p>Stealth operations drone with noise suppression and cloaking capabilities. Optimal for infiltration, signal tracing, and stealth delivery.</p>
                         <button type="button" class="btn btn-outline-violet mt-3" data-bs-toggle="modal" data-bs-target="#modalViper">Browse Images</button>
@@ -283,7 +283,7 @@
             <!-- SL-05 Raven -->
             <div class="col">
                 <div class="card h-100 shadow-lg border-0 rounded-4 text-center">
-                    <div class="card-body p-4">
+                    <div class="feature-box card-body p-4">
                         <h4 class="mb-3" style="color: #8e44ad;">SL-05 “Raven”</h4>
                         <p>Multi-terrain drone with both aerial and ground mobility. Designed for recon, relay missions, and low-altitude intelligence collection.</p>
                         <button type="button" class="btn btn-outline-violet mt-3" data-bs-toggle="modal" data-bs-target="#modalRaven">Browse Images</button>
@@ -315,7 +315,7 @@
             <!-- SL-07 Phantom Vortex -->
             <div class="col">
                 <div class="card h-100 shadow-lg border-0 rounded-4 text-center">
-                    <div class="card-body p-4">
+                    <div class="feature-box card-body p-4">
                         <h4 class="mb-3" style="color: #8e44ad;">SL-07 “Phantom Vortex”</h4>
                         <p>Experimental drone with magnetic levitation and zero-emission propulsion. Developed for high-speed, silent reconnaissance and disruption ops.</p>
                         <button type="button" class="btn btn-outline-violet mt-3" data-bs-toggle="modal" data-bs-target="#modalPhantom">Browse Images</button>
@@ -469,66 +469,64 @@
             <h2 class="mb-5 text-center section-title glow-violet">🛰️ Meet the Drone Army</h2>
             <div class="row text-center g-4 justify-content-center">
 
-            <!-- SL-01 Falcon -->
-            <div class="col-md-6 col-lg-4 col-xl-2">
-                <div class="feature-box h-100 p-4 border rounded shadow-sm bg-gradient bg-opacity-10">
-                <i class="fas fa-eye fa-2x mb-3 text-info glow-icon"></i>
-                <h5 class="fw-bold">SL-01 Falcon</h5>
-                <p>Autonomous surveillance unit with real-time anomaly detection and RTB self-charging system.</p>
+                <!-- SL-01 Falcon -->
+                <div class="col-md-6 col-lg-4 col-xl-2">
+                    <div class="feature-box h-100 p-4 border rounded shadow-sm bg-gradient bg-opacity-10">
+                    <i class="fas fa-eye fa-2x mb-3 text-info glow-icon"></i>
+                    <h5 class="fw-bold">SL-01 Falcon</h5>
+                    <p>Autonomous surveillance unit with real-time anomaly detection and RTB self-charging system.</p>
+                    </div>
                 </div>
-            </div>
 
-            <!-- SL-02 Hunter -->
-            <div class="col-md-6 col-lg-4 col-xl-2">
-                <div class="feature-box h-100 p-4 border rounded shadow-sm bg-gradient bg-opacity-10">
-                <i class="fas fa-crosshairs fa-2x mb-3 text-primary glow-icon"></i>
-                <h5 class="fw-bold">SL-02 Hunter</h5>
-                <p>AI-driven pursuit drone—target lock, pack tactics, and GPS sync for intercept missions.</p>
+                <!-- SL-02 Hunter -->
+                <div class="col-md-6 col-lg-4 col-xl-2">
+                    <div class="feature-box h-100 p-4 border rounded shadow-sm bg-gradient bg-opacity-10">
+                    <i class="fas fa-crosshairs fa-2x mb-3 text-primary glow-icon"></i>
+                    <h5 class="fw-bold">SL-02 Hunter</h5>
+                    <p>AI-driven pursuit drone—target lock, pack tactics, and GPS sync for intercept missions.</p>
+                    </div>
                 </div>
-            </div>
 
-            <!-- SL-03 Vulture -->
-            <div class="col-md-6 col-lg-4 col-xl-2">
-                <div class="feature-box h-100 p-4 border rounded shadow-sm bg-gradient bg-opacity-10">
-                <i class="fas fa-bolt fa-2x mb-3 text-warning glow-icon"></i>
-                <h5 class="fw-bold">SL-03 Vulture</h5>
-                <p>Tactical EMP UAV. Locates electronics, delivers a precision burst, then neutralizes or returns.</p>
+                <!-- SL-03 Vulture -->
+                <div class="col-md-6 col-lg-4 col-xl-2">
+                    <div class="feature-box h-100 p-4 border rounded shadow-sm bg-gradient bg-opacity-10">
+                    <i class="fas fa-bolt fa-2x mb-3 text-warning glow-icon"></i>
+                    <h5 class="fw-bold">SL-03 Vulture</h5>
+                    <p>Tactical EMP UAV. Locates electronics, delivers a precision burst, then neutralizes or returns.</p>
+                    </div>
                 </div>
-            </div>
 
-            <!-- SL-04 Viper -->
-            <div class="col-md-6 col-lg-4 col-xl-2">
-                <div class="feature-box h-100 p-4 border rounded shadow-sm bg-gradient bg-opacity-10">
-                <i class="fas fa-jet-fighter fa-2x mb-3 text-danger glow-icon"></i>
-                <h5 class="fw-bold">SL-04 Viper</h5>
-                <p>Rapid recon platform—stealth swarm-ready, predictive pathing, and tactical flare deployment.</p>
+                <!-- SL-04 Viper -->
+                <div class="col-md-6 col-lg-4 col-xl-2">
+                    <div class="feature-box h-100 p-4 border rounded shadow-sm bg-gradient bg-opacity-10">
+                    <i class="fas fa-jet-fighter fa-2x mb-3 text-danger glow-icon"></i>
+                    <h5 class="fw-bold">SL-04 Viper</h5>
+                    <p>Rapid recon platform—stealth swarm-ready, predictive pathing, and tactical flare deployment.</p>
+                    </div>
                 </div>
-            </div>
 
-            <!-- SL-05 Raven -->
-            <div class="col-md-6 col-lg-4 col-xl-2">
-                <div class="feature-box h-100 p-4 border rounded shadow-sm bg-gradient bg-opacity-10">
-                <i class="fas fa-feather-alt fa-2x mb-3 text-secondary glow-icon"></i>
-                <h5 class="fw-bold">SL-05 Raven</h5>
-                <p>Elite scout drone with HD optics, modular payloads, and seamless indoor/outdoor adaptability.</p>
+                <!-- SL-05 Raven -->
+                <div class="col-md-6 col-lg-4 col-xl-2">
+                    <div class="feature-box h-100 p-4 border rounded shadow-sm bg-gradient bg-opacity-10">
+                    <i class="fas fa-feather-alt fa-2x mb-3 text-secondary glow-icon"></i>
+                    <h5 class="fw-bold">SL-05 Raven</h5>
+                    <p>Elite scout drone with HD optics, modular payloads, and seamless indoor/outdoor adaptability.</p>
+                    </div>
                 </div>
-            </div>
 
-            <!-- SL-07 Phantom Vortex -->
-            <div class="col-md-6 col-lg-4 col-xl-2">
-                <div class="feature-box h-100 p-4 border rounded shadow-sm bg-gradient bg-opacity-10">
-                <i class="fas fa-wind fa-2x mb-3 text-light glow-icon"></i>
-                <h5 class="fw-bold">SL-07 Phantom Vortex</h5>
-                <p>Record-class interceptor. Breaks speed limits with AI stabilization and telemetry logging.</p>
+                <!-- SL-07 Phantom Vortex -->
+                <div class="col-md-6 col-lg-4 col-xl-2">
+                    <div class="feature-box h-100 p-4 border rounded shadow-sm bg-gradient bg-opacity-10">
+                    <i class="fas fa-wind fa-2x mb-3 text-light glow-icon"></i>
+                    <h5 class="fw-bold">SL-07 Phantom Vortex</h5>
+                    <p>Record-class interceptor. Breaks speed limits with AI stabilization and telemetry logging.</p>
+                    </div>
                 </div>
-            </div>
 
             </div>
         </div>
     </section>
     
-
-
 
     <!-- Drone AI Logs Section -->
     <section id="drone-logs" class="container py-5">
@@ -538,8 +536,8 @@
 
                 <!-- SL-01 Falcon Log -->
                 <div class="col">
-                    <div class="card h-100 shadow-lg border-0 rounded-4">
-                        <div class="card-body p-4">
+                    <div class="feature-box card h-100 shadow-lg border-0 rounded-4">
+                        <div class="feature-box card-body p-4">
                             <blockquote class="blockquote mb-4">
                             <p>"Falcon sweep concluded. Two anomalies flagged. Uploading thermal overlay to central core."</p>
                             <footer class="blockquote-footer">SL-01 Falcon <cite>[04:05 UTC]</cite></footer>
@@ -551,8 +549,8 @@
 
                 <!-- SL-02 Hunter Log -->
                 <div class="col">
-                    <div class="card h-100 shadow-lg border-0 rounded-4">
-                        <div class="card-body p-4">
+                    <div class="feature-box card h-100 shadow-lg border-0 rounded-4">
+                        <div class="feature-box card-body p-4">
                             <blockquote class="blockquote mb-4">
                             <p>"Target locked. Velocity sync engaged. Intercept in 4... 3... 2... —contact."</p>
                             <footer class="blockquote-footer">SL-02 Hunter <cite>[03:41 UTC]</cite></footer>
@@ -564,8 +562,8 @@
 
                 <!-- SL-03 Vulture Log -->
                 <div class="col">
-                    <div class="card h-100 shadow-lg border-0 rounded-4">
-                        <div class="card-body p-4">
+                    <div class="feature-box card h-100 shadow-lg border-0 rounded-4">
+                        <div class="feature-box card-body p-4">
                             <blockquote class="blockquote mb-4">
                             <p>"EMP charge deployed. All hostile electronics offline. Switching to RTB protocol."</p>
                             <footer class="blockquote-footer">SL-03 Vulture <cite>[02:19 UTC]</cite></footer>
@@ -577,8 +575,8 @@
 
                 <!-- SL-04 Viper Log -->
                 <div class="col">
-                    <div class="card h-100 shadow-lg border-0 rounded-4">
-                        <div class="card-body p-4">
+                    <div class="feature-box card h-100 shadow-lg border-0 rounded-4">
+                        <div class="feature-box card-body p-4">
                             <blockquote class="blockquote mb-4">
                             <p>"Sweep velocity at 98%. Flare deployed at Zone Theta. Returning to orbit."</p>
                             <footer class="blockquote-footer">SL-04 Viper <cite>[01:44 UTC]</cite></footer>
@@ -590,8 +588,8 @@
 
                 <!-- SL-05 Raven Log -->
                 <div class="col">
-                    <div class="card h-100 shadow-lg border-0 rounded-4">
-                        <div class="card-body p-4">
+                    <div class="feature-box card h-100 shadow-lg border-0 rounded-4">
+                        <div class="feature-box card-body p-4">
                             <blockquote class="blockquote mb-4">
                             <p>"Interior scan complete. Beacon signal deployed. Awaiting next objective."</p>
                             <footer class="blockquote-footer">SL-05 Raven <cite>[06:02 UTC]</cite></footer>
@@ -603,8 +601,8 @@
 
                 <!-- SL-07 Phantom Vortex Log -->
                 <div class="col">
-                    <div class="card h-100 shadow-lg border-0 rounded-4">
-                        <div class="card-body p-4">
+                    <div class="feature-box card h-100 shadow-lg border-0 rounded-4">
+                        <div class="feature-box card-body p-4">
                             <blockquote class="blockquote mb-4">
                             <p>"Velocity breach confirmed. Gyro hold locked. AI telemetry packet sent to core lab."</p>
                             <footer class="blockquote-footer">SL-07 Phantom Vortex <cite>[05:57 UTC]</cite></footer>
@@ -625,19 +623,19 @@
             <div class="row g-4 text-center justify-content-center">
 
                 <div class="col-md-3">
-                    <div class="p-4 border rounded shadow-sm">
+                    <div class="feature-box p-4 border rounded shadow-sm">
                     <h5 class="fw-bold">Falcon</h5>
                     <p>Feeds topographical data to Raven & Overwatch.</p>
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="p-4 border rounded shadow-sm">
+                    <div class="feature-box p-4 border rounded shadow-sm">
                     <h5 class="fw-bold">Hunter</h5>
                     <p>Receives target data from Viper, executes from shared grid.</p>
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="p-4 border rounded shadow-sm">
+                    <div class="feature-box p-4 border rounded shadow-sm">
                     <h5 class="fw-bold">Phantom Vortex</h5>
                     <p>Processes real-time velocity telemetry for Overwatch AI sync.</p>
                     </div>
@@ -652,7 +650,7 @@
             <h2 class="text-center mb-5 section-title glow-violet">📡 Command Interface</h2>
             <div class="row justify-content-center">
                 <div class="col-lg-8">
-                    <div class="border rounded p-4 shadow">
+                    <div class="feature-box border rounded p-4 shadow">
                         <p class="glow-violet"><strong>Ops Command Log:</strong></p>
                         <pre class="bg-secondary p-3 rounded text-start glow-teal">
                 [06:01:34] SL-01 Falcon uplink: anomaly pattern detected.
@@ -672,44 +670,44 @@
             <h2 class="text-center mb-5 section-title glow-violet">📊 Tactical Comparison Grid</h2>
             <div class="table-responsive">
                 <table class="table table-dark table-striped text-center align-middle">
-                    <thead>
-                    <tr>
-                        <th>Drone</th>
-                        <th>Role</th>
-                        <th>Top Speed</th>
-                        <th>Specialty</th>
-                        <th>Autonomy</th>
-                    </tr>
+                    <thead class="feature-box glow-violet">
+                        <tr>
+                            <th>Drone</th>
+                            <th>Role</th>
+                            <th>Top Speed</th>
+                            <th>Specialty</th>
+                            <th>Autonomy</th>
+                        </tr>
                     </thead>
-                    <tbody>
-                    <tr>
-                        <td>Falcon</td>
-                        <td>Recon</td>
-                        <td>240 km/h</td>
-                        <td>Thermal Mapping</td>
-                        <td>Full</td>
-                    </tr>
-                    <tr>
-                        <td>Hunter</td>
-                        <td>Interceptor</td>
-                        <td>300 km/h</td>
-                        <td>Auto-Target Lock</td>
-                        <td>Semi</td>
-                    </tr>
-                    <tr>
-                        <td>Vulture</td>
-                        <td>EMP Tactical</td>
-                        <td>180 km/h</td>
-                        <td>Precision Disabling</td>
-                        <td>Full</td>
-                    </tr>
-                    <tr>
-                        <td>Phantom Vortex</td>
-                        <td>Speed Runner</td>
-                        <td><strong>870 km/h</strong></td>
-                        <td>Telemetry Burst</td>
-                        <td>Experimental</td>
-                    </tr>
+                    <tbody class="feature-box">
+                        <tr>
+                            <td>Falcon</td>
+                            <td>Recon</td>
+                            <td>240 km/h</td>
+                            <td>Thermal Mapping</td>
+                            <td>Full</td>
+                        </tr>
+                        <tr>
+                            <td>Hunter</td>
+                            <td>Interceptor</td>
+                            <td>300 km/h</td>
+                            <td>Auto-Target Lock</td>
+                            <td>Semi</td>
+                        </tr>
+                        <tr>
+                            <td>Vulture</td>
+                            <td>EMP Tactical</td>
+                            <td>180 km/h</td>
+                            <td>Precision Disabling</td>
+                            <td>Full</td>
+                        </tr>
+                        <tr>
+                            <td>Phantom Vortex</td>
+                            <td>Speed Runner</td>
+                            <td><strong>870 km/h</strong></td>
+                            <td>Telemetry Burst</td>
+                            <td>Experimental</td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
