--- a/gamedevelopment.html
+++ b/gamedevelopment.html
@@ -184,7 +184,7 @@
     <!-- HellFull Hero -->
     <section id="hero-hellfull" class="text-center py-5 position-relative overflow-hidden">
         <div class="container position-relative">
-            <img src="images/HF_Library CapsuleV2 600px wide x 900px tall.png" alt="HellFull The Last Hope" class="logo mb-4" style="max-width:25%;">
+            <img src="images/HF_Library CapsuleV2 600px wide x 900px tall.png" alt="HellFull The Last Hope" class="feature-box logo mb-4" style="max-width:25%;">
 
             <h1 class="display-4 glow-red">
             HellFull – 5 Modes, One Epic Survival
