--- a/vehicles.html
+++ b/vehicles.html
@@ -162,7 +162,7 @@
             <!-- Off-Road Dune Buggy -->
             <div class="col">
                 <div class="card h-100 shadow-lg border-0 rounded-4 text-center">
-                    <div class="card-body p-4">
+                    <div class="feature-box card-body p-4">
                         <h4 class="mb-3" style="color: #e67e22;">XR-9 “Dune Buggy”</h4>
                         <p>Rugged suspension, reinforced frame, and desert-bred agility. Designed for maximum off-road carnage.</p>
                         <button type="button" class="btn btn-outline-orange mt-3" data-bs-toggle="modal" data-bs-target="#modalBuggy">Browse Images</button>
@@ -194,7 +194,7 @@
             <!-- Off-Road Motorbike -->
             <div class="col">
                 <div class="card h-100 shadow-lg border-0 rounded-4 text-center">
-                    <div class="card-body p-4">
+                    <div class="feature-box card-body p-4">
                         <h4 class="mb-3" style="color: #e67e22;">GravBike M7</h4>
                         <p>Electrified dual-suspension beast with adaptive terrain response. For trails, jumps, and raw power.</p>
                         <button type="button" class="btn btn-outline-orange mt-3" data-bs-toggle="modal" data-bs-target="#modalBike">Browse Images</button>
@@ -226,7 +226,7 @@
             <!-- On-Road Vehicle -->
             <div class="col">
                 <div class="card h-100 shadow-lg border-0 rounded-4 text-center">
-                    <div class="card-body p-4">
+                    <div class="feature-box card-body p-4">
                         <h4 class="mb-3" style="color: #e67e22;">Urban Striker GT</h4>
                         <p>Next-gen street vehicle with precision handling, low-profile armor, and smart-drive integration.</p>
                         <button type="button" class="btn btn-outline-orange mt-3" data-bs-toggle="modal" data-bs-target="#modalRoad">Browse Images</button>
@@ -258,7 +258,7 @@
             <!-- Zombie Apocalypse Build -->
             <div class="col">
                 <div class="card h-100 shadow-lg border-0 rounded-4 text-center">
-                    <div class="card-body p-4">
+                    <div class="feature-box card-body p-4">
                         <h4 class="mb-3" style="color: #e67e22;">ZB-01 “Reckoner”</h4>
                         <p>Armor-clad survival vehicle with mounted turrets, blackout mode, and reinforced supply storage.</p>
                         <button type="button" class="btn btn-outline-orange mt-3" data-bs-toggle="modal" data-bs-target="#modalZombie">Browse Images</button>
